--- a/src/app/Manager/edit-fiche/edit-fiche.component.html
+++ b/src/app/Manager/edit-fiche/edit-fiche.component.html
@@ -26,7 +26,7 @@
                         <option value="" disabled selected>-- Sélectionnez un type de contrat --</option>
                           <option value="Professionnalisation">Professionnalisation</option>   
                           <option value="TempsPartiel">TempsPartiel</option>
-                          <option value="ConsultantIndependant">Consultant Independant</option>  
+                          <option value="Consultant">Consultant </option>  
                         <option value="CDI">CDI</option>
                         <option value="CDD">CDD</option> 
                         <option value="Temporaire">Temporaire</option> 
