--- a/src/app/Admin/Competence/gestion-competence/gestion-competence.component.html
+++ b/src/app/Admin/Competence/gestion-competence/gestion-competence.component.html
@@ -162,6 +162,9 @@
                   </table>
                   
                 </div>
+                <div class="d-flex justify-content-center">
+              
+                </div>
               </div>
             </div>
           </div>
