--- a/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
+++ b/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
@@ -1,110 +1,164 @@
 <div class="container">
-    <div class="card">
-        <div class="card-body">
-          <div class="poste-details">
-            <h2 *ngIf="poste">{{poste.titre}}</h2>
-            <h6>Reference du poste : #{{poste.id}}</h6>
-           
-        </div>
-        <div class="poste-details">  
-    <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
-    <button class="btn btn-inverse-primary"(click)="openModal(poste.id)" >
-      Ajouter Un Test Technique</button>
-    
-          </div>
-          <button class="btn btn-inverse-warning" [disabled]="!quizzes || quizzes.length === 0" (click)="publierPoste(poste.id)">
-Publier</button>
-</div>
-</div>
+  <div class="card">
+    <div class="card-body">
+      <div class="poste-details">
+        <h2 *ngIf="poste">{{ poste.titre }}</h2>
+        <h6>Reference du poste : #{{ poste.id }}</h6>
+      </div>
+      <div class="poste-details">
+        <h6>Type de Contrat : {{ poste.typeContrat }}</h6>
+        <button class="btn btn-inverse-primary" (click)="openModal(poste.id)">
+          Ajouter Un Test Technique
+        </button>
+      </div>
+      <button
+        class="btn btn-inverse-warning"
+        [disabled]="!quizzes || quizzes.length === 0"
+        (click)="publierPoste(poste.id)"
+      >
+        Publier
+      </button>
+    </div>
+  </div>
 </div>
 
 <div class="row">
-    <div class="col-md-12 grid-margin stretch-card">
-      <div class="card">
-        <div class="card-body dashboard-tabs p-0">
-          <ul class="nav nav-tabs px-4" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active" id="overview-tab" data-bs-toggle="tab" href="#overview" role="tab" aria-controls="overview" aria-selected="true">Detail du poste</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="sales-tab" data-bs-toggle="tab" href="#sales" role="tab" aria-controls="sales" aria-selected="false">Test Technique</a>
-            </li>
-            <!-- <li class="nav-item">
+  <div class="col-md-12 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body dashboard-tabs p-0">
+        <ul class="nav nav-tabs px-4" role="tablist">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              id="overview-tab"
+              data-bs-toggle="tab"
+              href="#overview"
+              role="tab"
+              aria-controls="overview"
+              aria-selected="true"
+              >Detail du poste</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              id="sales-tab"
+              data-bs-toggle="tab"
+              href="#sales"
+              role="tab"
+              aria-controls="sales"
+              aria-selected="false"
+              >Test Technique</a
+            >
+          </li>
+          <!-- <li class="nav-item">
               <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Pipeline Candidat</a>
             </li> -->
-          </ul>
-          <div class="tab-content py-0 px-0">
-            <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview-tab">
-                <div *ngIf="poste">
-                    <br>
-                    <!-- Première carte pour la description -->
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4>Description</h4>
-                                    {{ poste.description }}
-                                </div>
-                            </div>
-                        </div>
+        </ul>
+        <div class="tab-content py-0 px-0">
+          <div
+            class="tab-pane fade show active"
+            id="overview"
+            role="tabpanel"
+            aria-labelledby="overview-tab"
+          >
+            <div *ngIf="poste">
+              <br />
+              <!-- Première carte pour la description -->
+              <div class="row">
+                <div class="col-12">
+                  <div class="card">
+                    <div class="card-body">
+                      <h4>Description</h4>
+                      {{ poste.description }}
                     </div>
-                    <!-- Deuxième carte pour les compétences -->
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4>Compétences</h4>
-                                    <div class="pill-container">
-                                        <span *ngFor="let competence of poste.competences; let i = index" class="pill">
-                                            {{ competence.nom }}
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  </div>
                 </div>
+              </div>
+              <!-- Deuxième carte pour les compétences -->
+              <div class="row">
+                <div class="col-12">
+                  <div class="card">
+                    <div class="card-body">
+                      <h4>Compétences</h4>
+                      <div class="pill-container">
+                        <span
+                          *ngFor="
+                            let competence of poste.competences;
+                            let i = index
+                          "
+                          class="pill"
+                        >
+                          {{ competence.nom }}
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            
-            <div class="tab-pane fade" id="sales" role="tabpanel" aria-labelledby="sales-tab">
-              <div class="containers">
-                <br>
-                <br>
-                <div *ngIf="quizzes.length > 0; else noQuizzes">
-                   <ul class="list-unstyled">
-                     <li *ngFor="let quiz of quizzes" class="card mb-3">
-                       <div class="card-body">
-                         <h3 class="card-title">{{ quiz.title }}</h3>
-                         <p class="card-text">Description: {{ quiz.description }}</p>
-                         <p class="card-text">Max Marks: {{ quiz.maxMarks }}</p>
-                         <p class="card-text">Total Questions: {{ quiz.numberOfQuestions }}</p>
-                         <div class="d-flex justify-content-end">
-                           <button class="btn btn-inverse-success" [routerLink]="'/managerService/view-question/' + quiz.qid + '/' + quiz.title">
-                            <i class="mdi mdi-comment-question-outline
-                            "> </i>                           </button>
-                           &nbsp;
-
-                           <button class="btn btn-inverse-primary" (click)="ToEdit(quiz.qid)"> <i class="mdi mdi-grease-pencil
-                            "> </i></button>
-                            &nbsp;
-                           <button class="btn btn-inverse-danger" (click)="deleteQuiz(quiz.qid)">      <i class="mdi mdi-delete
-                            "></i>
-                           </button>
-                         </div>
-                       </div>
-                     </li>
-                   </ul>
-                </div>
-                <ng-template #noQuizzes>
-                   <p>No quizzes found for this post.</p>
-                </ng-template>
-               </div>
-               
-              
           </div>
-            
+
+          <div
+            class="tab-pane fade"
+            id="sales"
+            role="tabpanel"
+            aria-labelledby="sales-tab"
+          >
+            <div class="containers">
+              <br />
+              <br />
+              <div *ngIf="quizzes.length > 0; else noQuizzes">
+                <ul class="list-unstyled">
+                  <li *ngFor="let quiz of quizzes" class="card mb-3">
+                    <div class="card-body">
+                      <h3 class="card-title">{{ quiz.title }}</h3>
+                      <p class="card-text">
+                        Description: {{ quiz.description }}
+                      </p>
+                      <p class="card-text">Max Marks: {{ quiz.maxMarks }}</p>
+                      <p class="card-text">
+                        Total Questions: {{ quiz.numberOfQuestions }}
+                      </p>
+                      <div class="d-flex justify-content-end">
+                        <button
+                          class="btn btn-inverse-success"
+                          [routerLink]="
+                            '/managerService/view-question/' +
+                            quiz.qid +
+                            '/' +
+                            quiz.title
+                          "
+                        >
+                          <i class="mdi mdi-comment-question-outline"> </i>
+                        </button>
+                        &nbsp;
+
+                        <button
+                          class="btn btn-inverse-primary"
+                          (click)="ToEdit(quiz.qid)"
+                        >
+                          <i class="mdi mdi-grease-pencil"> </i>
+                        </button>
+                        &nbsp;
+                        <button
+                          class="btn btn-inverse-danger"
+                          (click)="deleteQuiz(quiz.qid)"
+                        >
+                          <i class="mdi mdi-delete"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <ng-template #noQuizzes>
+                <p>No quizzes found for this post.</p>
+              </ng-template>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
