--- a/src/app/Manager/gestion-poste-by-id/gestion-poste-by-id.component.html
+++ b/src/app/Manager/gestion-poste-by-id/gestion-poste-by-id.component.html
@@ -6,7 +6,7 @@
         <h6>Reference du poste : #{{ poste.id }}</h6>
       </div>
 
-      <h6>Nombre de poste ouverts : {{ poste.nombrePostesDisponibles }}</h6>
+      <h6>Type de Contrat : {{ poste.typeContrat }}</h6>
 
       <div class="row">
         <!-- Première carte de tableau de bord -->
@@ -330,7 +330,11 @@
                 [cdkDropListData]="candidatures"
                 id="Entretien"
                 (cdkDropListDropped)="onDrop($event, 'Entretien')"
-                [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE' , 'EN_ATTENTE_ENTRETIEN_RH']"
+                [cdkDropListConnectedTo]="[
+                  'ACCEPTEE',
+                  'REFUSEE',
+                  'EN_ATTENTE_ENTRETIEN_RH'
+                ]"
               >
                 <h3>Entretien Technique</h3>
                 <div
@@ -360,77 +364,82 @@
                 </div>
               </div>
               <div
-              class="kanban-column"
-              style="border-top: 5px solid #5e475b"
-              cdkDropList
-              [cdkDropListData]="candidatures"
-              id="Entretien"
-              (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE_ENTRETIEN_RH')"
-              [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE' , 'Entretien_Rh']"
-            >
-              <h3>En Attente Entretien RH</h3>
-              <div
-                class="kanban-cards"
-                *ngFor="
-                  let candidature of candidatures | filter : 'EN_ATTENTE_ENTRETIEN_RH'
-                "
-                cdkDrag
-                [id]="candidature.candidature_id"
+                class="kanban-column"
+                style="border-top: 5px solid #5e475b"
+                cdkDropList
+                [cdkDropListData]="candidatures"
+                id="Entretien"
+                (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE_ENTRETIEN_RH')"
+                [cdkDropListConnectedTo]="[
+                  'ACCEPTEE',
+                  'REFUSEE',
+                  'Entretien_Rh'
+                ]"
               >
-                <div class="kanban-card">
-                  <img
-                    class="profile-image rounded-circle"
-                    [src]="'assets/images/' + candidature.image"
-                    alt="Profile Image"
-                  />
-                  <div class="profile-info">
-                    {{ candidature.nom }} {{ candidature.prenom }}
-                  </div>
-                  <button
-                    (click)="openModal(candidature.collaborateur_id)"
-                    class="btn btn-inverse-secondary btn-icon"
-                  >
-                    <i class="mdi mdi mdi-eye"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div
-            class="kanban-column"
-            style="border-top: 5px solid #487eb0"
-            cdkDropList
-            [cdkDropListData]="candidatures"
-            id="Entretien"
-            (cdkDropListDropped)="onDrop($event, 'Entretien_Rh')"
-            [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE' ]"
-          >
-            <h3>Entretien RH</h3>
-            <div
-              class="kanban-cards"
-              *ngFor="
-                let candidature of candidatures | filter : 'Entretien_Rh'
-              "
-              cdkDrag
-              [id]="candidature.candidature_id"
-            >
-              <div class="kanban-card">
-                <img
-                  class="profile-image rounded-circle"
-                  [src]="'assets/images/' + candidature.image"
-                  alt="Profile Image"
-                />
-                <div class="profile-info">
-                  {{ candidature.nom }} {{ candidature.prenom }}
-                </div>
-                <button
-                  (click)="openModal(candidature.collaborateur_id)"
-                  class="btn btn-inverse-secondary btn-icon"
+                <h3>En Attente Entretien RH</h3>
+                <div
+                  class="kanban-cards"
+                  *ngFor="
+                    let candidature of candidatures
+                      | filter : 'EN_ATTENTE_ENTRETIEN_RH'
+                  "
+                  cdkDrag
+                  [id]="candidature.candidature_id"
                 >
-                  <i class="mdi mdi mdi-eye"></i>
-                </button>
+                  <div class="kanban-card">
+                    <img
+                      class="profile-image rounded-circle"
+                      [src]="'assets/images/' + candidature.image"
+                      alt="Profile Image"
+                    />
+                    <div class="profile-info">
+                      {{ candidature.nom }} {{ candidature.prenom }}
+                    </div>
+                    <button
+                      (click)="openModal(candidature.collaborateur_id)"
+                      class="btn btn-inverse-secondary btn-icon"
+                    >
+                      <i class="mdi mdi mdi-eye"></i>
+                    </button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
+              <div
+                class="kanban-column"
+                style="border-top: 5px solid #487eb0"
+                cdkDropList
+                [cdkDropListData]="candidatures"
+                id="Entretien"
+                (cdkDropListDropped)="onDrop($event, 'Entretien_Rh')"
+                [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']"
+              >
+                <h3>Entretien RH</h3>
+                <div
+                  class="kanban-cards"
+                  *ngFor="
+                    let candidature of candidatures | filter : 'Entretien_Rh'
+                  "
+                  cdkDrag
+                  [id]="candidature.candidature_id"
+                >
+                  <div class="kanban-card">
+                    <img
+                      class="profile-image rounded-circle"
+                      [src]="'assets/images/' + candidature.image"
+                      alt="Profile Image"
+                    />
+                    <div class="profile-info">
+                      {{ candidature.nom }} {{ candidature.prenom }}
+                    </div>
+                    <button
+                      (click)="openModal(candidature.collaborateur_id)"
+                      class="btn btn-inverse-secondary btn-icon"
+                    >
+                      <i class="mdi mdi mdi-eye"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
               <!-- Colonne Acceptées -->
               <div
                 class="kanban-column"
@@ -471,7 +480,7 @@
                 class="kanban-column"
                 style="border-top: 5px solid #b72d2d"
                 cdkDropList
-                [cdkDropListData]="candidatures"  
+                [cdkDropListData]="candidatures"
                 id="REFUSEE"
                 (cdkDropListDropped)="onDrop($event, 'REFUSEE')"
                 [cdkDropListConnectedTo]="['EN_ATTENTE', 'ACCEPTEE']"
@@ -516,42 +525,38 @@
                 type="button"
                 class="btn btn-inverse-info btn-block"
               >
-              Appuyer Ici Pour Choisir les candidats pour l'entretien RH.
+                Appuyer Ici Pour Choisir les candidats pour l'entretien RH.
               </button>
             </div>
-            
-          
+
             <!-- src/app/score-test-technique/score-test-technique.component.html -->
             <div class="card-container">
               <mat-card class="score-test-technique-card">
-                 <mat-card-header>
-                     <mat-card-title>Score du Test Technique</mat-card-title>
-                 </mat-card-header>
-                 <mat-card-content>
-                   <canvas #barChart></canvas>
-                 </mat-card-content>
+                <mat-card-header>
+                  <mat-card-title>Score du Test Technique</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                  <canvas #barChart></canvas>
+                </mat-card-content>
               </mat-card>
-             
+
               <mat-card class="score-test-technique-card">
-                 <mat-card-header>
-                     <mat-card-title>Note de l'entretien</mat-card-title>
-                 </mat-card-header>
-                 <mat-card-content>
-                   <canvas #barChart2></canvas>
-                 </mat-card-content>
+                <mat-card-header>
+                  <mat-card-title>Note de l'entretien</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                  <canvas #barChart2></canvas>
+                </mat-card-content>
               </mat-card>
-              
-             </div>
-             <mat-card class="custom-card">
+            </div>
+            <mat-card class="custom-card">
               <mat-card-header>
-                  <mat-card-title>Salaire Demandé</mat-card-title>
+                <mat-card-title>Salaire Demandé</mat-card-title>
               </mat-card-header>
               <mat-card-content>
-                  <canvas #barChart3></canvas>
+                <canvas #barChart3></canvas>
               </mat-card-content>
-          </mat-card>
-          
-             
+            </mat-card>
           </div>
         </div>
       </div>
